feature: Update API documentation add delete link
